test/compile-fail/resolution/use/self-in-empty-prefix-group/expected.txt
error: `self` imports are only allowed in a { } list with a non-empty prefix
 --> top.rhdl:1:5
  |
1 | use {self};
  |      ^^^^ 
